--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "main": "src/app.js",
     "type": "module",
     "scripts": {
-        "dev": "node src/app.js"
+        "dev": "nodemon src/app.js",
+        "start": "node src/app.js"
     },
     "dependencies": {
         "dotenv": "^16.6.1",
