--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
         "express": "^4.19.2",
         "pg": "^8.11.3",
         "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.1"
+        "swagger-ui-express": "^5.0.1",
+        "zod": "^4.1.13"
     }
 }
